Fix misalignment of sidebar toggles

--- a/src/sunpy_sphinx_theme/theme/sunpy/static/sunpy_style.css
+++ b/src/sunpy_sphinx_theme/theme/sunpy/static/sunpy_style.css
@@ -223,6 +223,7 @@ html[data-theme="light"] .bd-sidebar-primary .theme-switch-button span {
 }
 
 .bd-header label.sidebar-toggle {
+  padding-bottom: 0;
   color: var(--sst-header-text);
 }
 
